Asyn-Programming-Code

--- a/src/app/new/new.component.html
+++ b/src/app/new/new.component.html
@@ -1,3 +1,15 @@
-<div>
-    <h2>welcome to Async and Await Programming.... </h2>
-  </div>
+<nav>
+
+  <img src="https://wallpapers.com/images/featured/interstellar-d5hpgadclxszmpeh.jpg" alt="">
+
+ 
+
+</nav>
+<div style="background-color: antiquewhite;" >
+  <h2 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Welcome to Async and Await Programming....Please wait it is loading </h2>
+</div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+  <footer>
+    <p>&copy; 2023 Subhash. All rights reserved.</p>
+  </footer>
