--- a/src/app/test/test.component.css
+++ b/src/app/test/test.component.css
@@ -1,17 +1,16 @@
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 300px;
-    width: 300px;
-    background-color: #f0f0f0;
-  }
-  
-  img {
-    max-width: 100%;
-    max-height: 100%;
-    transition: opacity 1s, transform 1s;
-  }
+
+
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+}
+
+
+
+
+
 
 
  
